--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     crossorigin="anonymous"> </head>
 
 <body>
-  <div id="app"></div>
+
+  <div id="app">
+    <app></app>
+  </div>
+
 
   <script src="/dist/build.js"></script>
 
