--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>&copy; Company 2017</p>
   </section>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="/dist/build.js "></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
 
