--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./src/css/main.css" rel="stylesheet">
+
 </head>
 
 <body class="">
